--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "vite-project",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.11",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "pinia": "^2.1.7",
+    "quasar": "^2.16.4",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.7.0",
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.0"
-  }
+    "postcss-rtl": "^3.5.3",
+    "sass": "^1.33.0",
+    "vite": "^5.2.0",
+    "vue-cli-plugin-quasar": "~5.1.0"
+  },
+  "type": "module"
 }
